# madalaine-letter-recognizer-AI

./: pyproject.toml
src/madalaine/: controller.py  interface.py  letters_enum.py  madalaine.py  main.py  presets.py  targets.py
src/madaline/: controller.py  interface.py  madaline.py
